# test-Rabbitmq

./: CMakeLists.txt  ConnectionHandler.cpp  ConnectionHandler.h  README.md  main.cpp
exemple/: CMakeCache.txt  CMakeLists.txt  Makefile  Test1NoTCP.cpp  Test2NoTCP.cpp  amqpcpp_libev_example  cmake_install.cmake  libev.cpp
include/: ConnectionHandler.h  callbacks.h  client.h
old_implementations/: client1.cpp  client2.cpp  client3.cpp  client4.cpp  http_request.cpp  testthread.cpp
src/: callbacks.cpp  client.cpp  client1.cpp  client2.cpp  client3.cpp  client4.cpp  diffqueueSecond.cpp  diffqueuefirst.cpp  exchange.cpp  exe1.cpp  exe2.cpp  parse.cpp  respond.cpp  samequeuefisrt.cpp  sendfirst.cpp  server.cpp  superviser.cpp
